--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="id_clock"></div>
+    <div id="id_clock">
+        <img src="./img/0.jpg" alt="hour" width="100" height="100" class="hour1">
+        <img src="./img/0.jpg" alt="hour" width="100" height="100" class="hour2">
+        <img src="./img/colon.jpg" alt="colon" width="100" height="100">
+        <img src="./img/0.jpg" alt="minut" width="100" height="100" class="minut1">
+        <img src="./img/0.jpg" alt="minut" width="100" height="100" class="minut2">
+        <img src="./img/colon.jpg" alt="colon" width="100" height="100" >
+        <img src="./img/0.jpg" alt="seconds" width="100" height="100" class="seconds1">
+        <img src="./img/0.jpg" alt="seconds" width="100" height="100" class="seconds2">
+    </div>
     <script src="./js/app.js"></script>
 </body>
 </html>
